--- a/config/database.yml
+++ b/config/database.yml
@@ -14,14 +14,14 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:
+  password: 123456
   socket: /tmp/mysql.sock
 
 development:
   <<: *default
   database: data_acquisition_development
-  username: root
-  password: hdwzc
+  username: wzc19931030
+  password: 123456
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
